--- a/src/View/Category/category.html.twig
+++ b/src/View/Category/category.html.twig
@@ -1,5 +1,3 @@
-{% extends 'layout.html.twig' %}
-
 {% block content %}
     <div class="container-fluid">
         <div class="row">
@@ -14,4 +12,4 @@
             </div>
         </div>
     </div>
-{% endblock content %}
+{% endblock %}
