--- a/public/assets/css/card.css
+++ b/public/assets/css/card.css
@@ -1,5 +1,5 @@
 .container {
-    font-family: 'Sniglet', cursive;
+    font-family: 'PT Sans', sans-serif;
 }
 .ct1{
     font-weight: bold;
@@ -8,8 +8,10 @@
     margin-right: 250px;
 }
 .ct2{
-    margin-bottom: 45px;
+    margin-bottom: 55px;
 }
 .card{
     border:none !important;
+    margin-left: 30px;
+    margin-right: 10px;
 }
