--- a/src/View/Home/card.html.twig
+++ b/src/View/Home/card.html.twig
@@ -12,34 +12,34 @@
     </div>
     <div class="container no-padding">
         <div class="ct2">
-            <div class="card mb-4">
+            <div class="card mb-5">
                 <div class="card">
                     <div class="row no-gutters">
-                        <div class="col-md-5">
-                            <img src="https://image.noelshack.com/fichiers/2019/16/2/1555415355-cafe.jpg" alt="...">
+                        <div class="col-md-6">
+                            <img src="https://image.noelshack.com/fichiers/2019/16/3/1555489325-adolescent-adulte-assiette-933964.jpg" alt="...">
                         </div>
                         <div class="col">
                             <div class="card-body">
                                 <p class="card-text"> Haec igitur prima lex amicitiae sanciatur, ut ab amicis honesta petamus, amicorum causa honesta faciamus,
                                     ne exspectemus quidem, dum rogemur; studium semper adsit, cunctatio absit; consilium vero dare audeamus libere.
-                                    non benevolentiae neque caritatis, ut quisque minimum firmitatis haberet minimumque virium, ita amicitias appetere maxime; ex eo fieri ut mulierculae </p>
+                                    non benevolentiae neque caritatis, ita amicitias appetere maxime; ex eo fieri ut mulierculae </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="card mb-3">
+        <div class="card mb-1">
             <div class="row no-gutters">
-                <div class="col-md-8">
+                <div class="col-md-7">
                     <div class="card-body">
                         <p class="card-text"> Haec igitur prima lex amicitiae sanciatur, ut ab amicis honesta petamus, amicorum causa honesta faciamus,
                             ne exspectemus quidem, dum rogemur; studium semper adsit, cunctatio absit; consilium vero dare audeamus libere.
-                            non benevolentiae neque caritatis, ut quisque minimum firmitatis haberet minimumque virium, ita amicitias appetere maxime; ex eo fieri ut mulierculae</p>
+                            non benevolentiae neque caritatis, minimumque virium, ita amicitias </p>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="https://image.noelshack.com/fichiers/2019/16/2/1555414378-coffee-983955-640.jpg" class="card-img" alt="...">
+                    <img src="https://image.noelshack.com/fichiers/2019/16/3/1555503839-a-l-interieur-accueillir-amis-1331971.jpg" class="card-img" alt="...">
                 </div>
             </div>
         </div>
