--- a/src/View/About/about.html.twig
+++ b/src/View/About/about.html.twig
@@ -10,17 +10,20 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../assets/images/logo/car1.jpg" class="d-block w-100" alt="oizu">
+                            <img src="../assets/images/logo/productor1.jpg" class="d-block w-100" alt="oizu">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/images/logo/car2.jpg" class="d-block w-100" alt="ij">
+                            <img src="../assets/images/logo/productor2.jpg" class="d-block w-100" alt="ij">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/images/logo/car3.jpg" class="d-block w-100" alt="ij">
+                            <img src="../assets/images/logo/productor3.jpg" class="d-block w-100" alt="ij">
                         </div>
 
                         <div class="carousel-item">
-                            <img src="../assets/images/logo/car4.jpg" class="d-block w-100" alt="ih">
+                            <img src="../assets/images/logo/productor4.jpg" class="d-block w-100" alt="ih">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/logo/productor5.jpg" class="d-block w-100" alt="ih">
                         </div>
                     </div>
 
