--- a/src/View/Products/index.html.twig
+++ b/src/View/Products/index.html.twig
@@ -5,11 +5,12 @@
 {% endblock %}
 
 {% block title %}
-    ARTICLES & PRODUITS
+    Products
 {% endblock  %}
 
 
 {%  block content %}
+
 {% include 'Category/category.html.twig' with categories %}
     <div class = "container">
         <div class = "row">
