--- a/src/View/Products/productDescription.html.twig
+++ b/src/View/Products/productDescription.html.twig
@@ -18,7 +18,7 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <p class="card-text float-right">{{ description.name }} </br></br> acidity : {{ description.acidity }} </br></br>caffeine : {{ description.caffeine }} </br></br>flavor : {{ description.flavor }} </br></br> origin : {{ description.origin }}</p>
+                            <p class="card-text float-right">{{ description.name }} </br></br> acidity : {{ description.acidity }} </br></br>caffeine : {{ description.caffeine }} </br></br>flavor : {{ description.flavor }} </br></br> origin : {{ description.origin }} </p></br></br> </p>
                         </div>
                     </div>
                 </div>
