--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -8,12 +8,15 @@
     <title>{% block title %}{% endblock %}</title>
 
     <link rel="icon" href="/assets/images/logo/spoon.png">
+    <link rel="stylesheet" type="text/css" href="/assets/css/navbar.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     {% block stylesheet %}{% endblock %}
 
 </head>
 
 <body>
+{%  include 'navbar.html.twig' %}
 
 {% block content %}{% endblock %}
 
