--- a/src/View/Home/addcontact.html.twig
+++ b/src/View/Home/addcontact.html.twig
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div class="container">
+        <div class="col-lg-12">
         <h3> Contactez nous! </h3>
+        </div>
     </div>
     <div class="container">
         <div class="row">
@@ -40,7 +42,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row mt-4">
+        <div class="row mt-4 ">
             <div class="col-lg-2"><a href="https://twitter.com/?lang=fr"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554902999-twitter-1.png" alt="logo.twitter" ></a></div>
             <div class="col-lg-2"><a href="https://fr-fr.facebook.com/"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554903375-facebook-logo.png" alt="logo.facebook" ></a></div>
             <div class="col-lg-2"><a href="https://www.youtube.com/"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554903591-youtube.png" alt="logo.youtube" ></a></div>
