--- a/public/assets/css/form.css
+++ b/public/assets/css/form.css
@@ -1,17 +1,13 @@
-.page{
-    margin-left:250px;
-}
 
-.titre{
-    margin-top: 120px;
-    margin-bottom: 20px;
-}
-.form{
-    margin-top: 80px;
-}
-.icone{
-    margin-top: 150px;
-}
 .footer{
     margin-top: 100px;
+
 }
+.title{
+    margin-top: 90px;
+    margin-bottom: 20px;
+}
+
+
+
+
