--- a/src/View/Home/addcontact.html.twig
+++ b/src/View/Home/addcontact.html.twig
@@ -1,64 +1,64 @@
 {% extends "layout.html.twig" %}
 
 {% block stylesheet %}
-
     <link rel="stylesheet" type="text/css" href="/assets/css/form.css">
-
 {% endblock %}
 
-{% block title %}Contact{% endblock %}
-
+{% block title %}
+    Contact
+{% endblock %}
 
 {% block content %}
-
     <div class="container">
-        <div class="col-lg-12">
-            <h3> Contactez nous! </h3>
+        <div class="title">
+            <div class="d-flex justify-content-center col-lg-12">
+                <h3> Contactez nous! </h3>
+            </div>
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <form action="" method="post" class="col-12">
-                <div class="form-group">
-                    <label for="firstname">First-name </label>
-                    <input name="firstname" {% if firstNameError is null %} value="{{ firstname }}" {% endif %}  type="text" id="firstname" class="form-control ">
-                    <div class="text-danger"> {{ firstNameError }} </div>
-                    {% if firstNameError is defined %}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    <label for="lastname">Last-name </label>
-                    <input name="lastname" {% if lastNameError is null %} value="{{ lastname }}" {% endif %} type="text" id="lastname" class="form-control  ">
-                    <div class="text-danger"> {{ lastNameError }} </div>
-                    {% if lastNameError is defined %}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    <label for="email">Email </label>
-                    <input name="email" {% if emailError is null %} value="{{ email }}" {% endif %} type="text" id="email" class="form-control   ">
-                    <div class="text-danger">  {{ emailError }} </div>
-                    {% if emailError is defined %}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    <label for="yourmessage">Your-message</label>
-                    <textarea name="yourmessage" id="yourmessage" rows="3" class="form-control "></textarea>
-                    <div class="text-danger">  {{ yourMessageError }} </div>
-                    {% if yourMessageError is defined %}
-                    {% endif %}
-                    <button class="btn btn-success mt-3" type="submit">Submit form</button>
-                </div>
-            </form>
+        <div class="mx-auto" style="width: 600px;">
+            <div class="row">
+                <form action="" method="post" class="col-12">
+                    <div class="form-group">
+                        <label for="firstname">Firstname </label>
+                        <input name="firstname" {% if firstNameError is null %} value="{{ firstname }}" {% endif %}  type="text" id="firstname" class="form-control ">
+                        <div class="text-danger"> {{ firstNameError }} </div>
+                        {% if firstNameError is defined %}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        <label for="lastname">Lastname </label>
+                        <input name="lastname" {% if lastNameError is null %} value="{{ lastname }}" {% endif %} type="text" id="lastname" class="form-control  ">
+                        <div class="text-danger"> {{ lastNameError }} </div>
+                        {% if lastNameError is defined %}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email </label>
+                        <input name="email" {% if emailError is null %} value="{{ email }}" {% endif %} type="text" id="email" class="form-control   ">
+                        <div class="text-danger">  {{ emailError }} </div>
+                        {% if emailError is defined %}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        <label for="yourmessage">Yourmessage</label>
+                        <textarea name="yourmessage" id="yourmessage" rows="3" class="form-control "></textarea>
+                        <div class="text-danger">  {{ yourMessageError }} </div>
+                        {% if yourMessageError is defined %}
+                        {% endif %}
+                        <button class="btn btn-success mt-3" type="submit">Submit form</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row mt-4 ">
-            <div class="col-lg-2"><a href="https://twitter.com/?lang=fr"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554902999-twitter-1.png" alt="logo.twitter" ></a></div>
-            <div class="col-lg-2"><a href="https://fr-fr.facebook.com/"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554903375-facebook-logo.png" alt="logo.facebook" ></a></div>
-            <div class="col-lg-2"><a href="https://www.youtube.com/"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554903591-youtube.png" alt="logo.youtube" ></a></div>
-            <div class="col-lg-2"><a href="https://www.linkedin.com/"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554903846-linkedin-big-logo.png" alt="logo.linkedin" ></a></div>
-            <div class="col-lg-2"><a href="https://www.instagram.com/?hl=fr"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554904043-instagram.png" alt="logo.instagram" ></a></div>
-            <div class="col-lg-2"><a href="https://www.pinterest.fr/"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554904814-pinterest.png" alt="logo.pinterest" ></a></div>
+    <div class="footer">
+        <div class="row mt-12 ">
+            <div class="d-flex justify-content-around mx-auto col-3" style="width: 200px" ><a href="https://twitter.com/?lang=fr"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554902999-twitter-1.png" alt="logo.twitter" ></a></div>
+            <div class="d-flex justify-content-around mx-auto col-3 " style="width: 200px" ><a href="https://fr-fr.facebook.com/"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554903375-facebook-logo.png" alt="logo.facebook" ></a></div>
+            <div class="d-flex justify-content-around mx-auto col-3 " style="width: 200px" ><a href="https://www.instagram.com/?hl=fr"><img src="https://image.noelshack.com/fichiers/2019/15/3/1554904043-instagram.png" alt="logo.instagram" ></a></div>
+            <div class="d-flex justify-content-around mx-auto col-3 " style="width: 200px" ><a href="https://www.snapchat.com/l/fr-fr/download/"><img src="https://image.noelshack.com/fichiers/2019/18/1/1556549975-snapchat.png" alt="logo.snaptchat" ></a></div>
         </div>
     </div>
 {% endblock content %}
